<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ITSchoolApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_account">请输入账号</string>
    <string name="login_password">请输入密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_exit">退出</string>
    <string name="cb_remember">记住账号和密码</string>
	<string name="tv_register">点击注册</string>
	<string name="tv_register_title">注册账户</string>
	<string name="register_tv_account">账号:</string>
	<string name="register_tv_password">密码:</string>
	<string name="register_btn_reg">注册</string>
</resources>
