<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView 
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/et_login_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_account"/>
    
    <EditText 
        android:id="@+id/et_login_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:inputType="textPassword"
        android:hint="@string/login_password"/>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        
    <CheckBox 
        android:id="@+id/cb_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_remember"/>
    
    <TextView 
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="#0000ff"
        android:layout_marginLeft="90sp"
        android:text="@string/tv_register"/>
    </LinearLayout>
    
    
    <Button 
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"/>
    
    <Button 
        android:id="@+id/btn_exit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_exit"/>
</LinearLayout>
